fix mobile menu overflow

--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -76,8 +76,8 @@ body > nav.menu {
   z-index: -1;
 
   ul {
-    justify-content: center;
-    padding-left: 30px !important;
+    margin: auto !important;
+    padding: 30px !important;
 
     li {
       &:not(:first-child) {
